# agentic-ai-mini-project

./: .env.example  DEMO.md  README.md  agent_a.py  agent_b.py  main.py  pyproject.toml  requirements.txt  test_api.py
api/: .env.example  main.py
api/routers/: get_weather.py
api/utils/: agent.py  ai_model.py  tools.py
web/: package-lock.json
web/src/: App.tsx
